Set up makefile for main build

--- a/server/makefile
+++ b/server/makefile
@@ -1,6 +1,10 @@
 CC=g++
 CFLAGS=-std=c++11 -Ofast -march=native $(pkg-config --cflags --libs opencv)
 BDIR=build
+SDIR=src
+
+$(BDIR)/main.out: src/*.cpp
+	$(CC) -o $(BDIR)/main.out src/*.cpp $(CFLAGS)
 
 $(BDIR)/vector3_test.out: src/vector3.cpp tests/vector3_test.cpp
 	$(CC) -o $(BDIR)/vector3_test src/vector3.cpp tests/vector3_test.cpp
